Переделано с учетом комментариев

--- a/Catalog-item.html
+++ b/Catalog-item.html
@@ -7,11 +7,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <p>
-          <a href="#">
+          <a class="logo" href="#">
             <img src="#" alt="Barbershop">
           </a>
-        </p>
         <nav class="main-navigation">
           <ul>
             <li>
@@ -40,9 +38,7 @@
       <div class="product_page">
         <div class="index-content-title">
           <h1>Набор для путешествий «Baxter of california»</h1>
-        </div>
-        <div class="breadcrumbs">
-          <ul>
+          <ul class="breadcrumbs">
             <li><a href="#">Главная</a></li>
             <li><a href="#">Магазин</a></li>
             <li><a href="#">Средства для ухода</a></li>
@@ -58,10 +54,8 @@
           </div>
           <div class="info_about_product">
             <div class="status_and_article">
-              <ul>
-                <li>Есть в наличии</li>
-                <li>Артикул: Dexter-Ae</li>
-              </ul>
+                <p><span class="status">Есть в наличии</span></p>
+                <p><span class="article">Артикул: Dexter-Ae</span></p>
             </div>
               <p>Travel kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыхф: средство для умывания,увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
                 <div class="product_price">
