--- a/Catalog.html
+++ b/Catalog.html
@@ -41,13 +41,17 @@
         <div class="index-content-title">
           <h1>Средства для ухода</h1>
         </div>
-        <div class="breadcrumbs">
-          <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Средства для ухода</a></li>
-          </ul>
-        </div>
+        <form class="breadcrumbs">
+          <fieldset>
+            <div class="breadcrumbs">
+              <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Магазин</a></li>
+                <li><a href="#">Средства для ухода</a></li>
+              </ul>
+            </div>
+          </fieldset>
+        </form>
         <div class="product_filters">
           <h2>Производители</h2>
           <ul>
@@ -65,7 +69,7 @@
             <li><input type="group_of_products_name" id="group_of_products_name_2"><label for="group_of_products_name_2">Средства для ухода</label></li>
             <li><input type="group_of_products_name" id="group_of_products_name_3"><label for="group_of_products_name_3">Аксесуары</label></li>
           </ul>
-          <p><button>Показать</button></p>
+          <button type="submit">Показать</button>
         </div>
         <div class="products">
           <div class="product">
