--- a/Catalog.html
+++ b/Catalog.html
@@ -7,11 +7,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <p>
-          <a href="#">
+          <a class="logo" href="#">
             <img src="#" alt="Barbershop">
           </a>
-        </p>
         <nav class="main-navigation">
           <ul>
             <li>
