Еще исправления подъехали

--- a/Catalog.html
+++ b/Catalog.html
@@ -53,19 +53,19 @@
         <div class="product_filters">
           <h2>Производители</h2>
           <ul>
-            <li><input type="manufacturers_name" id="manufacturers_name_1"><label for="manufacturers_name_1">Baxter of california</label></li>
-            <li><input type="manufacturers_name" id="manufacturers_name_2"><label for="manufacturers_name_2">mr Natty</label></li>
-            <li><input type="manufacturers_name" id="manufacturers_name_3"><label for="manufacturers_name_3">Suavecito</label></li>
-            <li><input type="manufacturers_name" id="manufacturers_name_4"><label for="manufacturers_name_4">Malin+Goetz</label></li>
-            <li><input type="manufacturers_name" id="manufacturers_name_5"><label for="manufacturers_name_5">Myrray's</label></li>
-            <li><input type="manufacturers_name" id="manufacturers_name_6"><label for="manufacturers_name_6">American crew</label></li>
+            <li><input type="radio" id="manufacturers_name_1"><label for="manufacturers_name_1">Baxter of california</label></li>
+            <li><input type="radio" id="manufacturers_name_2"><label for="manufacturers_name_2">mr Natty</label></li>
+            <li><input type="radio" id="manufacturers_name_3"><label for="manufacturers_name_3">Suavecito</label></li>
+            <li><input type="radio" id="manufacturers_name_4"><label for="manufacturers_name_4">Malin+Goetz</label></li>
+            <li><input type="radio" id="manufacturers_name_5"><label for="manufacturers_name_5">Myrray's</label></li>
+            <li><input type="radio" id="manufacturers_name_6"><label for="manufacturers_name_6">American crew</label></li>
           </ul>
           <h2>Группы товаров:</h2>
            <ul>
-            <li><input type="group_of_products_name" id="group_of_products_name_1"><label for="group_of_products_name_1">Бритвенные<br>
+            <li><input type="radio" id="group_of_products_name_1"><label for="group_of_products_name_1">Бритвенные<br>
             принадлежности</label></li>
-            <li><input type="group_of_products_name" id="group_of_products_name_2"><label for="group_of_products_name_2">Средства для ухода</label></li>
-            <li><input type="group_of_products_name" id="group_of_products_name_3"><label for="group_of_products_name_3">Аксесуары</label></li>
+            <li><input type="radio" id="group_of_products_name_2"><label for="group_of_products_name_2">Средства для ухода</label></li>
+            <li><input type="radio" id="group_of_products_name_3"><label for="group_of_products_name_3">Аксесуары</label></li>
           </ul>
           <button type="submit">Показать</button>
         </div>
